always-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: always-pod
spec:
  nodeSelector:
    juels: "genius"
  restartPolicy: Always ## This Always restart policy will always restart the pod when it fails. Failure status is determined by the health probes.
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 10']
