logs-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: logs-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do echo Here is my output; sleep 5; done']
