np-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-busybox
  namespace: network-policy-test
  labels:
    app: client
spec:
  containers:
  - name: nginx
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 5; done']
