np-nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-nginx
  namespace: network-policy-test
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
