shared-volume-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: shared-volume-pod
spec:
  containers:
  - name: busybox1
    image: busybox
    command: ['sh', '-c', 'while true; do echo success in succeeding! >> /output/output.txt; sleep 5; done']
    volumeMounts:
    - name: my-shared-volume
      mountPath: /output
  - name: busybox2
    image: busybox
    command: ['sh', '-c', 'while true; do cat /input/output.txt; sleep 5; done']
    volumeMounts:
    - name: my-shared-volume
      mountPath: /input
  volumes:
  - name: my-shared-volume
    emptyDir: {}
