volumes-type-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-type-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'echo success! > /output/success.txt']
    volumeMounts:
    - name: my-volume
      mountPath: /output
  volumes:
  - name: my-volume
    hostPath: 
      path: /var/data
