nginx-netshoot.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-netshoot
  labels:
    app: nginx-netshoot
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1

---

apiVersion: v1
kind: Service
metadata:
  name: svc-netshoot
spec:
  type: ClusterIP
  selector:
    app: nginx-netshoot
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
