svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport
spec:
  type: NodePort
  selector:
    app: svc-example
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080  ##[This allows us to specify the ports that our service is going to listen on externally] --- [so on port 30080 this service will be listening on all of our nodes including the control plane node]
